Crea el showcase de productos y lo estila

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+body{
+    font-family: 'Roboto';
+    overflow-x: hidden;
+}
+.container-fluid{
+    padding-left: 7vw !important;
+    padding-right:7vw !important;
+}
+
 #title{
     font-family: 'Roboto';
     font-size:auto;
