--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,12 @@ body{
     padding-left: 7vw !important;
     padding-right:7vw !important;
 }
+img.card-category{
+    border-radius: 20px !important;
+}
+.card{
+    border: none !important;
+}
 
 #title{
     font-family: 'Roboto';
@@ -17,4 +23,8 @@ body{
     height: 100vh;
     width: 100vw;
 
+}
+.card-title{
+    padding-top: 1rem;
+    align-self: center;
 }
